Added one-time development pricing

--- a/website-development.html
+++ b/website-development.html
@@ -147,7 +147,7 @@
                                 <div class="content">
                                     <h2><b>$250 per page</b></h2>
                                     <h2 class="h2-price"><b>$90 per month</b></h2>
-                                    <h3><b>Domain & hosting fees included</b></h3>
+                                    <h3><b>Hosting fees included</b></h3>
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
                                     <h3>No page minimum or maximum!</h3><br>
                                     <div class="buttons is-centered">
@@ -183,6 +183,29 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-code"></i>&nbsp;
+                                    One-Time Development
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2><b>$250 per page</b></h2>
+                                    <h3><b>Hosting fees included for one year</b></h3>
+                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
+                                    <h3>No page minimum or maximum!</h3>
+                                    <h3><b>Additional consulting after deployment will be billed at hourly consulting rate</b></h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-blue" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div><hr>
                 <h1 class="title">
                     Missionary Pricing
@@ -200,11 +223,34 @@
                                 <div class="content">
                                     <h2><b>$500 per website</b></h2>
                                     <h2 class="h2-price"><b>$50 per month</b></h2>
-                                    <h3><b>Domain & hosting fees included</b></h3>
+                                    <h3><b>Hosting fees included</b></h3>
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
                                     <h3>No page minimum or maximum!</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-blue" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header-brick">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-code"></i>&nbsp;
+                                    One-Time Development
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2><b>$500 per website</b></h2>
+                                    <h3><b>Hosting fees included for one year</b></h3>
+                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
+                                    <h3>No page minimum or maximum!</h3>
+                                    <h3><b>Additional consulting after deployment will be billed at hourly consulting rate</b></h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-brick" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
