Updated app pricing

--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -147,14 +147,16 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$350 per page</b></h2>
-                                    <h2 class="h2-price"><b>$150 per month</b></h2>
+                                    <h2><b>$500 per page</b></h2>
+                                    <h2 class="h2-price"><b>$180 per month</b></h2>
                                     <h3><b>No setup fee!</b></h3>
                                     <h3>Development for custom mobile app</h3>
                                     <h3>Deployment to both the Apple and Google app stores</h3>
                                     <h3>Option for tab and/or side menu navigation</h3>
-                                    <h3>No page limit!</h3>
+                                    <h3>Minimum of 3 pages</h3>
+                                    <h3>No page maximum!</h3>
                                     <h3>No limit for feature integrations!</h3>
+                                    <h3>Live updates for quicker customizations!</h3>
                                     <h3>Custom branding and push notifications</h3>
                                     <h3>Unlimited updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
