--- a/website-development.html
+++ b/website-development.html
@@ -60,6 +60,10 @@
                         Products
                     </a>
 
+                    <a class="navbar-item" href="https://kingdomappsolutions.tech/portfolio.html">
+                        Portfolio
+                    </a>
+
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link is-active" href="#">
                             Pricing
