Updated portfolio page to have borders

--- a/portfolio.html
+++ b/portfolio.html
@@ -151,7 +151,7 @@
                             <picture>
                                 <source srcset="./images/pathway.webp" type="images/webp">
                                 <source srcset="./images/pathway.png" type="images/png">
-                                <img class="home-image" src="./images/pathway.webp" width="640" height="480" alt="Pathway Baptist Church Website">
+                                <img class="home-image border" src="./images/pathway.webp" width="640" height="480" alt="Pathway Baptist Church Website">
                             </picture>
                         </a>
                     </div><br>
@@ -163,7 +163,7 @@
                             <picture>
                                 <source srcset="./images/bmat.webp" type="images/webp">
                                 <source srcset="./images/bmat.png" type="images/png">
-                                <img class="home-image" src="./images/bmat.webp" width="640" height="480" alt="BMA of Texas Website">
+                                <img class="home-image border" src="./images/bmat.webp" width="640" height="480" alt="BMA of Texas Website">
                             </picture>
                         </a>
                     </div><br>
@@ -175,7 +175,7 @@
                             <picture>
                                 <source srcset="./images/progress.webp" type="images/webp">
                                 <source srcset="./images/progress.png" type="images/png">
-                                <img class="home-image" src="./images/progress.webp" width="640" height="480" alt="Baptist Progress Website">
+                                <img class="home-image border" src="./images/progress.webp" width="640" height="480" alt="Baptist Progress Website">
                             </picture>
                         </a>
                     </div><br>
@@ -190,7 +190,7 @@
                             <picture>
                                 <source srcset="./images/fbcrice.webp" type="images/webp">
                                 <source srcset="./images/fbcrice.png" type="images/png">
-                                <img class="home-image" src="./images/fbcrice.webp" width="640" height="480" alt="First Baptist Church, Rice Website">
+                                <img class="home-image border" src="./images/fbcrice.webp" width="640" height="480" alt="First Baptist Church, Rice Website">
                             </picture>
                         </a>
                     </div><br>
@@ -202,7 +202,7 @@
                             <picture>
                                 <source srcset="./images/bmla.webp" type="images/webp">
                                 <source srcset="./images/bmla.png" type="images/png">
-                                <img class="home-image" src="./images/bmla.webp" width="640" height="480" alt="Baptist Missionary Loan Association Website">
+                                <img class="home-image border" src="./images/bmla.webp" width="640" height="480" alt="Baptist Missionary Loan Association Website">
                             </picture>
                         </a>
                     </div><br>
@@ -213,7 +213,7 @@
                         <picture>
                             <source srcset="./images/rotw.webp" type="images/webp">
                             <source srcset="./images/rotw.png" type="images/png">
-                            <img class="home-image" src="./images/rotw.png" width="640" height="480" alt="Red Oak Tire & Wheel, Inc. Website">
+                            <img class="home-image border" src="./images/rotw.png" width="640" height="480" alt="Red Oak Tire & Wheel, Inc. Website">
                         </picture>
                     </div>
                 </div><hr>
@@ -234,14 +234,14 @@
                             <picture>
                                 <source srcset="./images/missions-android.webp" type="images/webp">
                                 <source srcset="./images/missions-android.png" type="images/png">
-                                <img class="home-image" src="./images/missions-android.webp" width="640" height="480" alt="BMA Texas Missions Android App">
+                                <img class="home-image border" src="./images/missions-android.webp" width="640" height="480" alt="BMA Texas Missions Android App">
                             </picture><br>
                         </a>
                         <a href="https://apps.apple.com/us/app/bma-texas-missions/id1549908446">
                             <picture>
                                 <source srcset="./images/missions-apple.webp" type="images/webp">
                                 <source srcset="./images/missions-apple.png" type="images/png">
-                                <img class="home-image" src="./images/missions-apple.webp" width="640" height="480" alt="BMA Texas Missions Apple App">
+                                <img class="home-image border" src="./images/missions-apple.webp" width="640" height="480" alt="BMA Texas Missions Apple App">
                             </picture>
                         </a>
                     </div><br>
@@ -253,14 +253,14 @@
                             <picture>
                                 <source srcset="./images/bp-android.webp" type="images/webp">
                                 <source srcset="./images/bp-android.png" type="images/png">
-                                <img class="home-image" src="./images/bp-android.webp" width="640" height="480" alt="Baptist Progress Android App">
+                                <img class="home-image border" src="./images/bp-android.webp" width="640" height="480" alt="Baptist Progress Android App">
                             </picture><br>
                         </a>
                         <a href="https://apps.apple.com/us/app/baptist-progress/id1552253518">
                             <picture>
                                 <source srcset="./images/bp-apple.webp" type="images/webp">
                                 <source srcset="./images/bp-apple.png" type="images/png">
-                                <img class="home-image" src="./images/bp-apple.webp" width="640" height="480" alt="Baptist Progress Apple App">
+                                <img class="home-image border" src="./images/bp-apple.webp" width="640" height="480" alt="Baptist Progress Apple App">
                             </picture>
                         </a>
                     </div><br>
@@ -272,14 +272,14 @@
                             <picture>
                                 <source srcset="./images/se-android.webp" type="images/webp">
                                 <source srcset="./images/se-android.png" type="images/png">
-                                <img class="home-image" src="./images/se-android.webp" width="640" height="480" alt="Simple Evangelism Android App">
+                                <img class="home-image border" src="./images/se-android.webp" width="640" height="480" alt="Simple Evangelism Android App">
                             </picture><br>
                         </a>
                         <a href="https://apps.apple.com/us/app/simple-evangelism/id1616947451">
                             <picture>
                                 <source srcset="./images/se-apple.webp" type="images/webp">
                                 <source srcset="./images/se-apple.png" type="images/png">
-                                <img class="home-image" src="./images/se-apple.webp" width="640" height="480" alt="Simple Evangelism Apple App">
+                                <img class="home-image border" src="./images/se-apple.webp" width="640" height="480" alt="Simple Evangelism Apple App">
                             </picture>
                         </a>
                     </div>
