Updated About page

--- a/about.html
+++ b/about.html
@@ -148,19 +148,23 @@
                     <div class="column is-half">
                         <div class="card">
                             <div class="card-image">
-                                <figure class="image is-4by3">
+                                <figure class="image is-5by4">
                                     <picture>
                                         <source srcset="./images/pic.webp" type="images/webp">
                                         <source srcset="./images/pic.jpg" type="images/jpeg">
-                                        <img src="./images/pic.webp" alt="Justin Owens family" width="500" height="375">
+                                        <img src="./images/pic.webp" alt="Justin Owens family" width="640" height="420">
                                     </picture>
                                 </figure>
                             </div> 
                             <div class="card-content">
                                 <div class="media">
                                     <div class="media-left">
-                                        <figure class="image is-48x48">
-                                            <img src="https://i.imgur.com/bIr3R3N.jpg" alt="Justin Owens family" width="697" height="763">
+                                        <figure class="image is-64x64">
+                                            <picture>
+                                                <source srcset="./images/logo_rounded.webp" type="images/webp">
+                                                <source srcset="./images/logo_rounded.png" type="images/png">
+                                                <img src="./images/logo_rounded.webp" alt="Logo" width="640" height="420">
+                                            </picture>
                                         </figure>
                                     </div>
                                     <div class="media-content">
