Updated pricing for websites & consulting

--- a/consulting.html
+++ b/consulting.html
@@ -152,8 +152,8 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h2><b>$90 per hour</b></h2>
-                                    <h3>Website services include: SEO consulting, CMS consulting, custom coding, and social media marketing.</h3>
-                                    <h3>IT services include: hardware and software installations, network and security analysis, and providing IT-related assistance.</h3>
+                                    <h3>Website services include: SEO consulting, CMS consulting, website add-ons or assistance with a deployed website, custom coding and scripts, and social media marketing.</h3>
+                                    <h3>IT services include: hardware and software installations, network and security analysis, network and infrastructure installations and troubleshooting, and providing IT-related assistance.</h3>
                                     <h3>Large projects will be priced per project.</h3>
                                     <h3>Small projects will be priced per hour.</h3><br>
                                     <div class="buttons is-centered">
@@ -182,8 +182,8 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h2><b>$50 per hour</b></h2>
-                                    <h3>Website services include: SEO consulting, CMS consulting, custom coding, and social media marketing.</h3>
-                                    <h3>IT services include: hardware and software installations, network and security analysis, and providing IT-related assistance.</h3>
+                                    <h3>Website services include: SEO consulting, CMS consulting, website add-ons or assistance with a deployed website, custom coding and scripts, and social media marketing.</h3>
+                                    <h3>IT services include: hardware and software installations, network and security analysis, network and infrastructure installations and troubleshooting, and providing IT-related assistance.</h3>
                                     <h3>Large projects will be priced per project.</h3>
                                     <h3>Small projects will be priced per hour.</h3><br>
                                     <div class="buttons is-centered">
