--- a/website-development.html
+++ b/website-development.html
@@ -133,7 +133,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Website design & development is one of the foundational services Kingdom Application Solutions offers. A website is the first place people will visit when checking out your church, mission, religious non-profit organization, or business so it is a vital piece of any organization's marketing and outreach plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for your web presence. A well-made website illustrates to others that you do things with excellence and builds confidence in your organization. <br><br> Below you can see our pricing plans for churches, missionaries, and non-profit/business organizations. Contact us on our contact page to get more information regarding pricing or custom built websites.
+                    Website design & development is one of the foundational services Kingdom Application Solutions offers. A website is the first place people will visit when checking out your church, mission, religious non-profit organization, or business so it is a vital piece of any organization's marketing and outreach plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for your web presence. A well-made website illustrates to others that you do things with excellence and builds confidence in your organization. <br><br> Below you can see our pricing plans for churches, missionaries, and non-profit/business organizations. Contact us on our contact page to get more information regarding pricing or to set up a consultation for your website project!
                 </h2><hr>
                 <h1 class="title">
                     Pricing
@@ -151,7 +151,7 @@
                                 <div class="content">
                                     <h2><b>$250 per page</b></h2>
                                     <h2 class="h2-price"><b>$90 per month</b></h2>
-                                    <h3><b>Hosting fees included</b></h3>
+                                    <h3><b>Hosting fees included for one year</b></h3>
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
                                     <h3>No page minimum or maximum!</h3><br>
                                     <div class="buttons is-centered">
@@ -167,32 +167,6 @@
                             <header class="card-header-brick">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-code"></i>&nbsp;
-                                    Custom Website Development
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    <h2><b>$50 per hour</b></h2>
-                                    <h2 class="h2-price"><b>$90 per month</b></h2>
-                                    <h3><b>8 hours per page minimum</b></h3>
-                                    <h3><b>First 4 hours down payment</b></h3>
-                                    <h3><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
-                                    <h3>No page minimum or maximum!</h3>
-                                    <h3><b>Annual hosting renewal included</b></h3>
-                                    <h3><b><i>BEST VALUE FOR CUSTOM WEBSITE SOLUTION!</i></b></h3><br>
-                                    <div class="buttons is-centered">
-                                        <a class="button info-button-brick" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-code"></i>&nbsp;
                                     One-Time Development
                                 </p>
                             </header>
@@ -200,11 +174,11 @@
                                 <div class="content">
                                     <h2><b>$250 per page</b></h2>
                                     <h3><b>Hosting fees included for one year</b></h3>
-                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
+                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup</b></h3>
                                     <h3>No page minimum or maximum!</h3>
                                     <h3><b>Additional consulting after deployment will be billed at hourly consulting rate</b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-blue" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-brick" href="https://kingdomappsolutions.tech/contact" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -227,7 +201,7 @@
                                 <div class="content">
                                     <h2><b>$500 per website</b></h2>
                                     <h2 class="h2-price"><b>$50 per month</b></h2>
-                                    <h3><b>Hosting fees included</b></h3>
+                                    <h3><b>Hosting fees included for one year</b></h3>
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
                                     <h3>No page minimum or maximum!</h3><br>
                                     <div class="buttons is-centered">
@@ -250,7 +224,7 @@
                                 <div class="content">
                                     <h2><b>$500 per website</b></h2>
                                     <h3><b>Hosting fees included for one year</b></h3>
-                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
+                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup</b></h3>
                                     <h3>No page minimum or maximum!</h3>
                                     <h3><b>Additional consulting after deployment will be billed at hourly consulting rate</b></h3><br>
                                     <div class="buttons is-centered">
